[tool.poetry]
name = "radio-rec"
version = "0.0.1"
description = "A&G download"
authors = ["TaizoAyase <zxcvbnmkind@gmail.com>"]
readme = "README.md"
packages = [{ include = "radio_rec" }]

[tool.poetry.dependencies]
python = ">=3.8"
toml = "^0.10.2"
colorlog = "<5.0.0"

[tool.poetry.group.dev.dependencies]
pysen = { extras = ["lint"], version = "^0.9.1" }
click = "8.0.1"
ipython = "^7.25.0"
jedi = "0.17.2"
pytest = "^7.1.3"
pytest-cov = "^2.12.1"
bump2version = "^1.0.1"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = true
mypy_preset = "strict"
line_length = 88
py_version = "py38"

[[tool.pysen.lint.mypy_targets]]
paths = ["."]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
